# authful-mcp-proxy-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs
src/oidc/: callback.rs  client.rs  discovery.rs  mod.rs  pkce.rs  token.rs
src/proxy/: mod.rs  server.rs
tests/: middleware_integration.rs  proxy_integration.rs
