[package]
name = "authful-mcp-proxy-rs"
version = "0.1.0"
edition = "2021"
authors = ["Authful MCP Proxy Contributors"]
description = "MCP proxy with OIDC authentication for Claude Desktop"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SaSteffen/authful-mcp-proxy-rs"
keywords = ["mcp", "oauth", "oidc", "proxy"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "authful-mcp-proxy-rs"
path = "src/main.rs"

[dependencies]
# MCP Protocol
rmcp = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client with middleware
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
reqwest-middleware = "0.3"
http = "1"
async-trait = "0.1"

# Web framework for OAuth callback
axum = "0.8"
tower = "0.5"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = "0.4"

# Cross-platform browser launching
webbrowser = "1"

# Cryptography for PKCE
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# URL parsing
url = "2"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller binary

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
